[project]
name = "autocpa"
version = "0.1.0"
description = "Local-first AI financial analysis tool for Chinese Annual Reports"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "streamlit>=1.30.0",
    "pdfplumber>=0.10.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "financetoolkit>=1.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    # Additional useful libs
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*"]
